# shadow-cli

./: Cargo.toml  Readme.md  rustfmt.toml
src/: app_error.rs  config.rs  constants.rs  error.rs  fs.rs  main.rs  utils.rs
src/commands/: init.rs  mod.rs
