[package]
name = "shadow"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to manage the akashi shadow records"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
inquire = "0.6.2"
lazy_static = "1.4.0"
magic-crypt = "3.1.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
